--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,12 @@
 cat > .gitignore << 'EOF'
-# Node
 node_modules/
-npm-debug.log*
-yarn-error.log*
 dist/
 build/
 .next/
 .env
 .env.local
-.env.*.local
-
-# Firebase
+.env.*
 .firebase/
 .firebaserc
-
-# OS
 .DS_Store
-
-# Large files
-*.log
 EOF
