--- a/ARES-website/package.json
+++ b/ARES-website/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^12.9.0",
     "gsap": "^3.12.5",
     "next": "14.2.5",
     "react": "18.2.0",
