--- a/ARES/server/package.json
+++ b/ARES/server/package.json
@@ -10,6 +10,13 @@
   },
   "dependencies": {
     "@google/genai": "^1.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^22.10.2",
+    "@types/pg": "^8.11.10",
+    "@types/uuid": "^9.0.8",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -21,17 +28,10 @@
     "openai": "^4.73.1",
     "pg": "^8.12.0",
     "razorpay": "^2.9.3",
+    "typescript": "^5.6.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/cors": "^2.8.17",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^22.10.2",
-    "@types/express": "^4.17.21",
-    "@types/pg": "^8.11.10",
-    "@types/uuid": "^9.0.8",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
+    "tsx": "^4.19.2"
   }
 }
